samples/_failures_safe/1761288535_6fafa0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a453603e.c: In function ‘main’:
./samples/SAFE/__tmp_a453603e.c:180:47: error: ‘MAX_TO’ undeclared (first use in this function); did you mean ‘MAX_TOKENS’?
  180 |     int token_count = tokenize(input, tokens, MAX_TO
      |                                               ^~~~~~
      |                                               MAX_TOKENS
./samples/SAFE/__tmp_a453603e.c:180:47: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a453603e.c:180:53: error: expected ‘)’ at end of input
  180 |     int token_count = tokenize(input, tokens, MAX_TO
      |                               ~                     ^
      |                                                     )
./samples/SAFE/__tmp_a453603e.c:180:5: error: expected declaration or statement at end of input
  180 |     int token_count = tokenize(input, tokens, MAX_TO
      |     ^~~
